--- a/talk.html
+++ b/talk.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>AITalk</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jua&family=Spline+Sans+Mono:wght@500&display=swap');
     </style>
@@ -83,13 +83,18 @@
             background-color: #48121f;
             color: #ddd;
             padding: 5px;
+            font-size:15px;
         }
 
         .input {
             background-color: #333;
             color: #ddd;
-            padding: 5px;
+            padding: 8px;
             border-bottom: 1px solid #222;
+            resize: none;
+            zoom: reset;
+            font-size:15px;
+
         }
     </style>
 
