--- a/talk.html
+++ b/talk.html
@@ -11,22 +11,10 @@
     </style>
     <style>
         * {
-            -webkit-user-drag: none;
             -webkit-touch-callout: none;
-            -webkit-user-select: none;
-            -khtml-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-            /* touch-action: none; */
             box-sizing: border-box;
-            /* font-family: 'Jua', sans-serif; */
             font-family: 'Spline Sans Mono', monospace;
-
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-
-            /* backdrop-filter: blur(4px); */
-
         }
 
         body {
@@ -83,7 +71,7 @@
             background-color: #48121f;
             color: #ddd;
             padding: 5px;
-            font-size:15px;
+            font-size: 15px;
         }
 
         .input {
@@ -93,8 +81,13 @@
             border-bottom: 1px solid #222;
             resize: none;
             zoom: reset;
-            font-size:15px;
-
+            font-size: 15px;
+            
+        }
+        
+        .talkbox {
+            white-space: pre-wrap;
+            font-size: 12px;
         }
     </style>
 
@@ -102,11 +95,15 @@
 
 <body>
     <script>
-        window.__path_json = 'https://cdn.jsdelivr.net/gh/kstost/RES/encoder.json';
-        window.__path_bpe = 'https://cdn.jsdelivr.net/gh/kstost/RES/vocab.bpe';
+        if (location.host === '127.0.0.1:5500') {
+            window.__path_json = 'encoder.json';
+            window.__path_bpe = 'vocab.bpe';
+        } else {
+            window.__path_json = 'https://cdn.jsdelivr.net/gh/kstost/RES/encoder.json';
+            window.__path_bpe = 'https://cdn.jsdelivr.net/gh/kstost/RES/vocab.bpe';
+        }
     </script>
-    <script src="./bundle.js"></script>
-    <!-- <script src="../dist/bundle.js"></script> -->
+<script src="./bundle.js"></script>
 </body>
 
 </html>
