--- a/samplepage2.html
+++ b/samplepage2.html
@@ -51,7 +51,7 @@
                 const inputValue = parseFloat(inputText.value);
                 if (!isNaN(inputValue)) {
                     const square = inputValue * inputValue;
-                    message.textContent = `Square of ${inputValue} is ${square}`;
+                    message.textContent = `${square}`;
                 } else {
                     message.textContent = "Please enter a valid number.";
                 }
