--- a/samplepage3.html
+++ b/samplepage3.html
@@ -134,7 +134,7 @@ body {
 
     <!-- 하단 푸터 -->
     <footer class="footer">
-        이 페이지는 <a href="https://www.example.com/" class="footer-link">ChatGPT</a>에 의해 생성되었습니다.
+        이 페이지는 <a href="https://chat.openai.com/share/ed3127fb-ff6a-4cf0-af94-08c1944fec1e" class="footer-link">ChatGPT</a>에 의해 생성되었습니다.
     </footer>
 </body>
 </html>
