--- a/wedding.html
+++ b/wedding.html
@@ -139,7 +139,7 @@
             //     false && await new Promise(r => video.on('ended', r));
             // }
             {
-                let vdo = await makeVideo("wedding_res01.MP4", {
+                let vdo = await makeVideo("wedding_res01.mp4", {
                     top: 0,
                     left: 0,
                     opacity: 1,
